Fix string-nav padding alignment

--- a/server/static/css/student.css
+++ b/server/static/css/student.css
@@ -490,7 +490,7 @@ header .logo {
       margin-top: 0.25em;
   }
 .string-nav {
-  padding:2em 1.5em 0.5em 1.5em;
+  padding:2em 14px 0.5em 14px;
 }
 
 .other-courses {
